[project]
name = "gemini-parser"
version = "0.1.0.post2"
description = "A Python library for processing documents with the Gemini API"
readme = "README.md"
authors = [{ name = "Thimira Nirmal", email = "timnirmal@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "tqdm",
    "PyPDF2",
    "google-genai",
    "python-dotenv",
    "httpx"
]

[project.urls]
Homepage = "https://github.com/timnirmal/gemini-parser"
Repository = "https://github.com/timnirmal/gemini-parser"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gemini_parser*"]
